--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -116,14 +116,14 @@
             <android.support.v7.widget.AppCompatTextView
                 android:id="@+id/mine_bottom_list"
                 style="@style/fragment_mine_tv"
-                android:text="底部弹出list单选(选择notice)" />
+                android:text="中间弹出list多选(选择notice)" />
 
             <include layout="@layout/include_line"></include>
 
             <android.support.v7.widget.AppCompatTextView
                 android:id="@+id/mine_bottom_userlist"
                 style="@style/fragment_mine_tv"
-                android:text="底部弹出list多选(选择user)" />
+                android:text="底部弹出list单选(选择user)" />
 
             <include layout="@layout/include_line"></include>
 
@@ -148,10 +148,34 @@
 
             <include layout="@layout/include_line"></include>
 
-            <android.support.v7.widget.AppCompatTextView
-                android:id="@+id/mine_sing_out"
-                style="@style/fragment_mine_tv"
-                android:text="退出程序" />
+
+            <android.support.v7.widget.LinearLayoutCompat
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/color_white"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <android.support.v7.widget.AppCompatTextView
+                    android:id="@+id/mine_sing_out"
+                    android:layout_width="0dp"
+                    android:layout_height="@dimen/px_80"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="@dimen/px_24"
+                    android:paddingRight="@dimen/px_24"
+                    android:text="退出程序" />
+
+                <android.support.v7.widget.SwitchCompat
+                    android:id="@+id/mine_sing_out_sw"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="@dimen/px_30"
+                    android:layout_marginRight="@dimen/px_24"
+                    android:gravity="center_vertical"
+                    android:text="Text？" />
+
+            </android.support.v7.widget.LinearLayoutCompat>
 
             <include layout="@layout/include_line"></include>
 
@@ -159,6 +183,13 @@
                 android:id="@+id/mine_switch_fragment"
                 style="@style/fragment_mine_tv"
                 android:text="切换fragment" />
+
+            <include layout="@layout/include_line"></include>
+
+            <android.support.v7.widget.AppCompatTextView
+                android:id="@+id/mine_permission"
+                style="@style/fragment_mine_tv"
+                android:text="申请权限" />
         </LinearLayout>
     </ScrollView>
 
